# learning-rabbitmq-haskell

./: Makefile  cabal.project  docker-compose.yml  readme.md  shell.nix
projects/consumer/: CHANGELOG.md  consumer.cabal
projects/consumer/app/: Consumer.hs  Main.hs
projects/producer/: CHANGELOG.md  producer-t.cabal
projects/producer/app/: Producer.hs
projects/sdk/: CHANGELOG.md  sdk.cabal
projects/sdk/src/: MyLib.hs  Sdk.hs  Types.hs
