cabal-version:      3.0
name:               consumer
version:            0.1.0.0
-- synopsis:
-- description:
license:            Unlicense
license-file:       LICENSE
author:             Bruno Dias
maintainer:         dias.h.bruno@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable consumer
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , bytestring
                    , text
                    , sdk
                    , amqp
    hs-source-dirs:   app
    default-language: Haskell2010
