cabal-version:      3.0
name:               sdk
version:            0.1.0.0
-- synopsis:
-- description:
license:            Unlicense
license-file:       LICENSE
author:             Bruno Dias
maintainer:         dias.h.bruno@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , bytestring
                    , text
                    , amqp
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite sdk-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        sdk
